--- a/gtk-4.0/gtk.css
+++ b/gtk-4.0/gtk.css
@@ -4233,8 +4233,7 @@ switch {
 /************
  * Toolbars *
  ************/
-toolbar, .inline-toolbar, searchbar,
-.location-bar {
+toolbar, .inline-toolbar, searchbar > revealer > box {
   padding: 4px;
   background-color: #EEEEEE; }
 
@@ -4266,18 +4265,15 @@ toolbar {
   border-width: 0 1px 1px;
   border-radius: 0  0 5px 5px; }
 
-searchbar,
-.location-bar {
+searchbar > revealer > box {
   border-width: 0 0 1px;
   padding: 3px; }
 
-.inline-toolbar, searchbar,
-.location-bar {
+.inline-toolbar, searchbar > revealer > box {
   border-style: solid;
   border-color: rgba(0, 0, 0, 0.2);
   background-color: rgba(227, 227, 227, 0.76); }
-  .inline-toolbar:backdrop, searchbar:backdrop,
-  .location-bar:backdrop {
+  .inline-toolbar:backdrop, searchbar > revealer > box:backdrop {
     border-color: rgba(119, 119, 119, 0.28);
     background-color: rgba(228, 228, 228, 0.748);
     box-shadow: none;
